testament/tests/shouldfail/tfile.nim
discard """
  errormsg: "undeclared identifier: 'undefined'"
  file: "notthisfile.nim"
"""

echo undefined
